--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,11 @@ language: python
 sudo: false
 python:
   - "3.4"
+  - "3.5"
 before_install:
   - pip install codecov
 install:
-  - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-  - conda create -q -n testenv python=$TRAVIS_PYTHON_VERSION
-  - source activate testenv
-  - conda install pip
-  - pip install -r requirements.txt
+  - pip install -r requirements-dev.txt
   - pip install -e .
 script:
   - make test
