--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.4"
   - "3.5"
 before_install:
+  - pip install --upgrade pip
   - pip install codecov
 install:
   - pip install -r requirements-dev.txt
