--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal = 1
 
 [pytest]
-addopts = --cov-report term-missing --cov podoc -s
+addopts = --cov-report term-missing --cov podoc
 
 [flake8]
 ignore=E265
