--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ sudo: false
 python:
   - "3.4"
   - "3.5"
+addons:
+  apt_packages:
+    - pandoc
 before_install:
-  - sudo apt-get install pandoc
   - pip install --upgrade pip
   - pip install codecov
 install:
