--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - pip install --upgrade pip
   - pip install codecov
 install:
+  - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
   - pip install -e .
 script:
