--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ python:
   - "2.7"
   - "3.4"
   - "3.5"
-addons:
-  apt_packages:
-    - pandoc
 before_install:
   - pip install --upgrade pip
   - pip install codecov
+  - "[ ! -d ~/bin ] && mkdir ~/bin || true"
+  - "wget -q -O - https://github.com/yihui/crandalf/raw/master/inst/scripts/install-pandoc | bash"
 install:
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
