--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,22 @@
 [wheel]
 universal = 1
 
-[pytest]
+[tool:pytest]
 
 [flake8]
-ignore=E265
+ignore = E265,E731,F403
+max-line-length = 99
+
+[coverage:run]
+branch = False
+source = podoc
+omit =
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    raise AssertionError
+    raise NotImplementedError
+    pass
+    return$
+show_missing = True
