Make tests pass

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ universal = 1
 [tool:pytest]
 
 [flake8]
-ignore = E265,E731,F403
+ignore = E265,E731,F403,F601
 max-line-length = 99
 
 [coverage:run]
