--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 python:
   - "3.6"
 before_install:
-  - sudo apt-get install xvfb libfontconfig wkhtmltopdf imagemagick tex-common texlive -y
+  - sudo apt-get install xvfb libfontconfig wkhtmltopdf imagemagick tex-common texlive dvipng -y
   - pip install --upgrade pip
   - pip install codecov
   - sudo bash latest_pandoc.sh  # install latest pandoc release
